--- a/paper/rev.bib
+++ b/paper/rev.bib
@@ -1,5 +1,125 @@
 % Encoding: UTF-8
 
+@article{Thomas2012,
+  doi = {10.4000/belgeo.6074},
+  url = {https://doi.org/10.4000/belgeo.6074},
+  year = {2012},
+  month = mar,
+  publisher = {{OpenEdition}},
+  number = {1-2},
+  author = {Isabelle Thomas and Camille Cotteels and Jonathan Jones and Dominique Peeters},
+  title = {Revisiting the extension of the Brussels urban agglomeration~: new methods,  new data {\ldots} new results~?},
+  journal = {Belgeo}
+}
+
+@article{blondel2008Louvain,
+  title={Fast unfolding of communities in large networks},
+  author={Blondel, Vincent D and Guillaume, Jean-Loup and Lambiotte, Renaud and Lefebvre, Etienne},
+  journal={Journal of statistical mechanics: theory and experiment},
+  volume={2008},
+  number={10},
+  pages={P10008},
+  year={2008},
+  publisher={IOP Publishing}
+}
+
+@article{ArribasBel2011Som,
+title = "Multidimensional urban sprawl in Europe: A self-organizing map approach",
+journal = "Computers, Environment and Urban Systems",
+volume = "35",
+number = "4",
+pages = "263 - 275",
+year = "2011",
+issn = "0198-9715",
+doi = "https://doi.org/10.1016/j.compenvurbsys.2010.10.002",
+author = "Daniel Arribas-Bel and Peter Nijkamp and Henk Scholten",
+keywords = "Urban sprawl, Self-organizing maps, Connectivity, Density, Scattering, Europe"
+}
+
+
+
+@article{Dani2013_som_maxp,
+author = {Daniel Arribas-Bel and Charles R Schmidt},
+title ={Self-Organizing Maps and the US Urban Spatial Structure},
+journal = {Environment and Planning B: Planning and Design},
+volume = {40},
+number = {2},
+pages = {362-371},
+year = {2013},
+doi = {10.1068/b37014}
+}
+
+
+@article{Guo2008Redcap,
+author = { D. Guo },
+title = {Regionalization with dynamically constrained agglomerative clustering and partitioning (REDCAP)},
+journal = {International Journal of Geographical Information Science},
+volume = {22},
+number = {7},
+pages = {801-823},
+year  = {2008},
+publisher = {Taylor & Francis},
+doi = {10.1080/13658810701674970}
+}
+
+
+@article{Lang2014Geons,
+author = {Stefan Lang and Stefan Kienberger and Dirk Tiede and Michael Hagenlocher and Lena Pernkopf},
+title = {Geons – domain-specific regionalization of space},
+journal = {Cartography and Geographic Information Science},
+volume = {41},
+number = {3},
+pages = {214-226},
+year  = {2014},
+publisher = {Taylor & Francis},
+doi = {10.1080/15230406.2014.902755},
+}
+
+
+@article{brantingham1978topological,
+  title={A topological technique for regionalization},
+  author={Brantingham, Patricia L and Brantingham, Paul J},
+  journal={Environment and Behavior},
+  volume={10},
+  number={3},
+  pages={335--353},
+  year={1978},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+
+@article{assunccao2006efficient,
+  title={Efficient regionalization techniques for socio-economic geographical units using minimum spanning trees},
+  author={Assun{\c{c}}{\~a}o, Renato M and Neves, Marcos Corr{\^e}a and C{\^a}mara, Gilberto and da Costa Freitas, Corina},
+  journal={International Journal of Geographical Information Science},
+  volume={20},
+  number={7},
+  pages={797--811},
+  year={2006},
+  publisher={Taylor \& Francis}
+}
+@article{montello2003regions,
+  title={Regions in geography: Process and content},
+  author={Montello, Daniel R},
+  journal={Foundations of geographic information science},
+  pages={173--189},
+  year={2003},
+  publisher={Taylor \& Francis London}
+}
+
+
+@article{maxp,
+author = {Duque, Juan C. and Anselin, Luc and Rey, Sergio J.},
+title = {THE MAX-P-REGIONS PROBLEM*},
+journal = {Journal of Regional Science},
+volume = {52},
+number = {3},
+pages = {397-419},
+doi = {10.1111/j.1467-9787.2011.00743.x},
+year = {2012}
+}
+
+%#----------------------
+
 @book{sampson2012great,
   title={Great American city: Chicago and the enduring neighborhood effect},
   author={Sampson, Robert J},
