--- a/paper/study.tex
+++ b/paper/study.tex
@@ -306,14 +306,14 @@ understand the sources of urban volatility.
 
 
 
-\smallskip While Toronto is more dynamic than Los Angeles, possibly due to size
-differences, the volatile regions shown in Figure~\ref{fig:toVol} did not change
-as quickly or dramatically as the ones shown in Figure~\ref{fig:laVol}, which
-involved twice as many people. We found this trend to be related to the
-countries themselves, Canadian cities have larger areas undergoing slow, gradual
-changes, whereas American cities have more general stability, but quicker
-changes in smaller scales. The supplementary material contains brief summaries
-of all the regions accessible in this prototype.
+% \smallskip While Toronto is more dynamic than Los Angeles, possibly due to size
+% differences, the volatile regions shown in Figure~\ref{fig:toVol} did not change
+% as quickly or dramatically as the ones shown in Figure~\ref{fig:laVol}, which
+% involved twice as many people. We found this trend to be related to the
+% countries themselves, Canadian cities have larger areas undergoing slow, gradual
+% changes, whereas American cities have more general stability, but quicker
+% changes in smaller scales. The supplementary material contains brief summaries
+% of all the regions accessible in this prototype.
 
 
 
