--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -12,8 +12,8 @@ tools~\citep{rey2018spatio}, and new sources of data~\citep{Poorthuis2018}.
 
 \revision{In this work, we consider neighbourhoods as \emph{formal
 regions}~\citep{montello2003regions}, geographically continous areas with
-similar data characteristics.} These advances have made neighbourhood constructs
-more tractable to quantitative analysis. Yet new challenges have also emerged,
+similar data characteristics, which these advances made more tractable to
+approach in a data-driven fashion.} Yet new challenges have also emerged,
 especially at the convergence of research on neighbourhood effects and
 neighbourhood dynamics. Neighbourhood effects research assumes knowledge about
 the nature and scope of "the neighbourhood" that presumably shapes individual
