--- a/paper/related.tex
+++ b/paper/related.tex
@@ -73,10 +73,7 @@ Data clustering is one of the elementary processes for data analysis,
 simplifying the data into a smaller number of homogeneous sets that can be
 interpreted in the same way. There is no shortage of contributions for this
 problem~\citep{Fahad2014}\revision{, since variations of it appear in almost all
-scientific fields. Most neighbourhood related applications still rely on
-k-means~\citep{jain2010data,Delmelle2016}, the Louvain method for community
-detection~\citep{blondel2008Louvain,Thomas2012}, or, to a lesser extent, Self
-Organising Maps~\citep{Delmelle2017,Ling2016,Dani2013_som_maxp}.}
+scientific fields.}
 
 
 \revision{In geography, this problem is known as
@@ -87,7 +84,11 @@ geometry~\citep{assunccao2006efficient}. Indeed, network-based methods are among
 the current state-of-the-art~\citep{Guo2008Redcap,maxp}. However,
 \emph{temporal} regionalisation is significantly less explored, especially in a
 demographic context, arguably due to the difficulties in dealing with
-unharmonised longitudinal data.
+unharmonised longitudinal data.   Recent neighbourhood related applications rely
+on k-means~\citep{jain2010data,Delmelle2016}, the Louvain method for community
+detection~\citep{blondel2008Louvain,Thomas2012}, or, to a lesser extent, Self
+Organising Maps~\citep{Delmelle2017,Ling2016,Dani2013_som_maxp}, but do not
+consider longitudinal data, or harmonised data.
 
 
 Since we adopted a network-based data representation and our objectives include
