--- a/paper/method.tex
+++ b/paper/method.tex
@@ -263,15 +263,20 @@ time. Clicking on a region in these maps will bring up a new panel with the
 original census data of this specific region. The actual population numbers are
 below the maps.
 
-%TODO THIS IS WRONG!
+
 Each aspect is represented by a stacked bar plot, where the width of each
-rectangle corresponds to the average percentage of that variable over the
-considered period. In this case, about half of the people in this region, in the
-considered period, are married, and the percentage that are Widowers or Divorced
-is roughly similar. About half of the population work in Administrative jobs, a
-third never completed high-school, approximately half have gross family income
-below 50,000USD per year. The vast majority identify as white. Placing the mouse
-over one of the bars will open a small panel with the temporal evolution of that
-specific variable, and clicking on the chevron on the right side expands the
-corresponding aspect, showing details of the temporal evolution of each variable
-and also the corresponding IQRs for the whole city.
+rectangle corresponds to \revision{the percentage of population in that variable
+over the considered period. In this case, a little less than half of the
+population are married, and the percentage that are Widowers or Divorced is
+roughly similar. About half of the population work in Administrative jobs, a
+third never completed high-school, approximately fourty percentq have gross
+family income below 50,000USD per year. About sixty percent identify as white.
+Placing the mouse over one of the bars will open a small panel with the temporal
+evolution of the population percentage of that specific variable, and clicking
+on the chevron on the right side expands the corresponding aspect, showing
+census level statistics, with details of the temporal evolution of each variable
+and also the corresponding IQRs for the whole city. Those values are potentially
+different, for instance, while the overall population of this region is about
+sixty percent White, it includes regions with wildly different percentages, so
+the average percentage of White population over the CTs is a little over fourty
+percent.}
