--- a/paper/discussion.tex
+++ b/paper/discussion.tex
@@ -6,16 +6,12 @@ visualisation methods for the exploration of geographically inconsistent
 region-based data. While we successfully replicated and corroborated results
 from the literature, this method still has significant limitations. 
 
-
-Removing the need for geographical harmonisation greatly reduces the amount of
-work necessary to explore demographic data, but the method still requires
-consistent variables across the years. Matching the variables can be trivial for
-some aspects (Age), but challenging for others (Income). The divulged income
-ranges vary over time and the actual values change due to inflation. Some
-variables were not considered in earlier censuses, such as Race in Canada, or
-Hispanic population in the USA, hampering its use when they are available. Since
-this is only a prototype, we matched few aspects, but a proper demographic
-analysis would benefit from all available information. 
+We removed the need for geographical harmonisation, but the method still
+requires consistent variables across the years. Matching the variables can be
+trivial for some aspects (Age), but challenging for others (Income). The
+divulged income ranges vary over time and the actual values change due to
+inflation. Since this is only a prototype, we matched few aspects, but a proper
+demographic analysis would benefit from all available information. 
 
 The limitation on the number of displayed clusters because of the limited number
 of distinguishable colours was significant. While increasing the number of
