--- a/paper/related.tex
+++ b/paper/related.tex
@@ -5,9 +5,10 @@ Since our problem encompasses several fields, we divide this section into
 specific sub problems: \emph{longitudinal demographic studies}, describing the
 traditional tabular approach to longitudinal studies; \emph{data
 representation}, elaborating how evolving geographic data can be represented for
-processing; \emph{data clustering}, briefly reviewing existing clustering
-methods; and \emph{cluster characterisation}, articulating how clusters can be
-visually summarised.
+processing; \emph{data clustering and regionalisation}, briefly reviewing
+existing data clustering methods,\revision{ geographic constraints and
+regionalisation}; and \emph{cluster characterisation}, articulating how clusters
+can be visually summarised.
 
 \subsection{Longitudinal demographic studies}
 Census data is used not only to discover demographic
@@ -48,15 +49,15 @@ naturally represented as different entities.
 Network based representation of geographic information is fairly well explored
 in the literature, as a basis for topological methods for event
 detection~\citep{Doraiswamy2014}, leveraging signal processing on
-graphs~\citep{shuman2013emerging,sandryhaila2013discrete} to find patterns and
+networks~\citep{shuman2013emerging,sandryhaila2013discrete} to find patterns and
 outliers~\citep{Valdivia2015,Dias2015,Alce2018}. Networks are well suited to
 represent trajectories as
 well~\citep{VonLandesberger2016,Huang2016,chen2015survey}, allowing the use of
-graph visualisation methods~\citep{Vehlow2015,Beck2014}. Our proposed method
+network visualisation methods~\citep{Vehlow2015,Beck2014}. Our proposed method
 builds upon this literature. We leverage a network-based representation that
-removes the requirement for consistency in the measurement regions. Each region
-in time corresponds to a different node. Instead of a collection of time-series,
-the data is represented as a dynamic network. 
+removes the rigidity in the measurement regions. Each region in time corresponds
+to a different node. Instead of a collection of time-series, the data is
+represented as a dynamic network. 
 
 Networks have been used to represent census data for clustering purposes
 ~\citep{Dias2015,Setiadi2017}, but these works did not explore temporal
@@ -84,24 +85,25 @@ geometry~\citep{assunccao2006efficient}. Indeed, network-based methods are among
 the current state-of-the-art~\citep{Guo2008Redcap,maxp}. However,
 \emph{temporal} regionalisation is significantly less explored, especially in a
 demographic context, arguably due to the difficulties in dealing with
-unharmonised longitudinal data.   Recent neighbourhood related applications rely
+unharmonised longitudinal data. Recent neighbourhood related applications rely
 on k-means~\citep{jain2010data,Delmelle2016}, the Louvain method for community
 detection~\citep{blondel2008Louvain,Thomas2012}, or, to a lesser extent, Self
-Organising Maps~\citep{Delmelle2017,Ling2016,Dani2013_som_maxp}, but do not
-consider longitudinal data, or harmonised data.
+Organising Maps~\citep{Delmelle2017,Ling2016,Dani2013_som_maxp}.
 
 
 Since we adopted a network-based data representation and our objectives include
 an interactive interface, we opted for an heuristic variation of the maximum
 weighted matching algorithm called \emph{sorted maximal
 matching}~\citep{markus2017}, because of its simplicity, customisability, and
-fast computation times. This algorithm merges clusters based on the weights of
-the edges between pairs of clusters, creating an hierarchy over the data,
-allowing the user to change the number of clusters without reprocessing the
-data. Changing the clustering algorithm would lead to different results, but any
-hierarchical network clustering method can be used in our framework. Indeed, our
-core contribution is a different interpretation of the data representation, not
-a new clustering or regionalisation method.}
+fast computation times. This algorithm operates on weighted networks, where a
+distance metric is between the nodes is associated with the edges. We adopted a
+distance based on the data associated with each node. The algorithm merges
+clusters based on these distances, creating an hierarchy instead of a fixed
+number of clusters. This hierarchical result is rendered by the interface,
+allowing the user to change the number of clusters without reprocessing.
+Changing the clustering algorithm would lead to different results, but any
+hierarchical network clustering method, and distance metric, can be used in our
+framework. }
 
 
 \subsection{Cluster characterisation}
